--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,56 @@
 /* Header */
 .header {
-    background-color: #000000;
-    height: 50px;
+    background-color: var(--header-background-color);
+    height: var(--header-height);
     padding: 10px 20px;
+    font-family: 'SF Pro Light';
+    font-size: .9rem;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 100;
 }
 
 .header .logo {
-    height: 30px;
+    height: 25px;
     padding-right: 20px;
 }
 
 .header .nav-link {
     color: #ffffff;
     padding-right: 20px;
+}
+
+.header .nav-icons {
+    color: #ffffff;
+}
+
+.header .nav-icons li {
+    padding-right: 20px;
+}
+
+/* Home Page */
+.home-page {
+    background-image: url('img/main-bg.jpg');
+    background-size: cover;
+    height: 100vh;
+    font-family: 'SF Pro Light';
+}
+
+.home-page .logo {
+    width: 400px;
+}
+
+.home-page .subtitle {
+    font-size: 1.2rem;
+    color: #ffffff;
+    margin-top: 20px;
+}
+
+.home-page .lockscreen-logo {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
