--- a/src/index.css
+++ b/src/index.css
@@ -30,12 +30,55 @@
     padding-right: 20px;
 }
 
+/* Footer */
+.footer {
+    background-color: var(--footer-background-color);
+    height: var(--footer-height);
+    position: fixed;
+    bottom: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 10px;
+    border: 1px solid rgba(162, 162, 162, 0.5);
+    border-radius: 20px;
+}
+
+.footer-link {
+    width: 50px;
+    height: 50px;
+    margin-right: 15px;
+}
+
+.footer-link:last-child {
+    margin-right: 0;
+    margin-left: 10px;
+}
+
+.footer-link .link-icon {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    border-radius: 20%;
+}
+
+.footer .links li:nth-last-child(2)::after {
+    content: '';
+    position: absolute;
+    right: 70px; 
+    top: 50%;
+    transform: translateY(-50%);
+    width: 1px;
+    height: 60%;
+    background-color: rgba(162, 162, 162, 0.5);
+}
+
 /* Home Page */
 .home-page {
     background-image: url('img/main-bg.jpg');
     background-size: cover;
     height: 100vh;
     font-family: 'SF Pro Light';
+    padding-top: 100px;
 }
 
 .home-page .logo {
@@ -46,6 +89,7 @@
     font-size: 1.2rem;
     color: #ffffff;
     margin-top: 20px;
+    font-family: 'SF Pro Regular';
 }
 
 .home-page .lockscreen-logo {
@@ -53,4 +97,37 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+
+.folders {
+    width: 20%;
+    flex-wrap: wrap;
+}
+
+.folder {
+    margin-bottom: 30px;
+    width: calc(50% - 30px);
+    margin-right: 30px;
+}
+
+.folder .folder-icon {
+    width: 70px;
+}
+
+.folder-label {
+    padding-top: 10px;
+    color: #ffffff;
+    font-size: 0.9rem;
+}
+
+.reel {
+    margin-bottom: 30px;
+}
+
+.reel-icon {
+    width: 70px;
+}
+
+.cv-icon {
+    width: 50px;
 }
