--- a/src/common.css
+++ b/src/common.css
@@ -14,6 +14,13 @@ a{
     color: inherit;
 }
 
+button {
+    border: none;
+    background: none;
+    color: inherit;
+    cursor: pointer;
+}
+
 /* COMMON */
 /* Layout */
 .container {
@@ -45,6 +52,11 @@ a{
 
 .align-center {
     align-items: center;
+}
+
+/* Display */
+.d-none {
+    display: none;
 }
 
 /* Typography */
