--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,12 @@
     padding-right: 20px;
 }
 
+.nav-link .active {
+    background-color: var(--active-link-color);
+    border-radius: 5px;
+    padding: 3px 8px;
+}
+
 /* Footer */
 .footer {
     background-color: var(--footer-background-color);
@@ -64,12 +70,40 @@
 .footer .links li:nth-last-child(2)::after {
     content: '';
     position: absolute;
-    right: 70px; 
+    right: -15px;
     top: 50%;
     transform: translateY(-50%);
     width: 1px;
-    height: 60%;
+    height: 100%;
     background-color: rgba(162, 162, 162, 0.5);
+}
+
+.hover-link-label {
+    display: none;
+    position: absolute;
+    bottom: 90px;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: .5rem .8rem;
+    background-color: var(--hover-link-label-background-color);
+    color: #fff;
+    border-radius: 8px;
+    text-align: center;
+    font-family: 'SF Pro Light';
+    font-size: .8rem;
+}
+
+.hover-link-label::after {
+    content: '';
+    position: absolute;
+    bottom: -10px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 0;
+    height: 0;
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+    border-top: 10px solid var(--hover-link-label-background-color);
 }
 
 /* Home Page */
@@ -111,23 +145,43 @@
 }
 
 .folder .folder-icon {
-    width: 70px;
+    width: 80px;
+    padding: .3rem;
 }
 
 .folder-label {
-    padding-top: 10px;
+    padding: .3rem;
     color: #ffffff;
     font-size: 0.9rem;
 }
 
-.reel {
-    margin-bottom: 30px;
+.cv .cv-icon {
+    width: 60px;
 }
 
-.reel-icon {
-    width: 70px;
+/* Projects Page */
+.projects-page {
+    height: 100vh;
+    font-family: 'SF Pro Light';
+    padding-top: 100px;
 }
 
-.cv-icon {
-    width: 50px;
+/* DROPDOWN DRAFT */
+/* .projects-dropdown {
+    position: absolute;
+    top: 30px;
+    left: -5px;
+    border: 1px solid rgba(162, 162, 162, 0.5);
+    background-color: var(--dropdown-background-color);
+    color: #ffffff;
+    border-radius: 10px;
+    padding: 10px;
+    z-index: 1000;
+    width: 180px;
 }
+
+.projects-dropdown .dropdown-link {
+    padding: 5px 10px;
+    color: #ffffff;
+    font-size: 0.9rem;
+} */
