--- a/src/index.css
+++ b/src/index.css
@@ -163,7 +163,171 @@
 .projects-page {
     height: 100vh;
     font-family: 'SF Pro Light';
-    padding-top: 100px;
+}
+
+.side-menu {
+    height: 100vh;
+    padding-top: 70px;
+    width: var(--side-menu-width);
+    background-color: var(--side-menu-background-color);
+    color: #ffffff;
+}
+
+.projects-list {
+    background-color: var(--project-page-background-color);
+    padding-top: 70px;
+    width: calc(100% - var(--side-menu-width));
+    color: #ffffff;
+}
+
+.side-menu-header {
+    height: 30px;
+    padding-bottom: 20px;
+}
+
+.side-menu-header::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 200px;
+    height: 1px;
+    background-color: rgb(1, 4, 22);
+    box-shadow: 5px 2px 8px #4c4d53;
+}
+
+.projects-list-header {
+    height: 30px;
+    padding-bottom: 20px;
+}
+
+.projects-list-header::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    background-color: rgb(1, 4, 22);
+    box-shadow: 5px 2px 8px #4c4d53;
+}
+
+.side-menu-body {
+    padding: 0 30px;
+}
+
+.projects-list-body {
+    padding: 30px;
+}
+
+.side-menu-header .close-btn {
+    width: 12px;
+    height: 12px;
+    margin-right: 10px;
+    border-radius: 50%;
+    background-color: var(--close-btn-color);
+}
+
+.side-menu-header .hide-btn {
+    width: 12px;
+    height: 12px;
+    margin-right: 10px;
+    border-radius: 50%;
+    background-color: var(--hide-btn-color);
+}
+
+.side-menu-header .expand-btn {
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+    background-color: var(--expand-btn-color);
+}
+
+.navigation {
+    padding-left: 30px;
+}
+
+.actions {
+    padding-right: 30px;
+}
+
+.back-btn {
+    padding-right: 10px;
+    font-family: 'SF Pro Thin';
+    font-size: 1.5rem;
+}
+
+.forward-btn {
+    padding-right: 20px;
+    font-family: 'SF Pro Thin';
+    font-size: 1.5rem;
+}
+
+.search-bar {
+    background-color: var(--project-page-background-color);
+    border: 1px solid rgba(162, 162, 162, 0.5);
+    border-radius: 8px;
+    padding: 5px 10px;
+}
+
+.search-bar-icon {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 10px;
+    font-size: .8rem;
+    color: rgba(162, 162, 162, 0.5);
+}
+
+.buttons {
+    margin-right: 50px;
+}
+
+.layout-grid {
+    margin-right: 25px;
+}
+
+.layout-grid::after {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 25px;
+    transform: translateY(-50%);
+    width: 1px;
+    height: 20px;
+    background-color: rgba(162, 162, 162, 0.5);
+}
+
+.layout-list {
+    margin-right: 40px;
+}
+
+.category-item {
+    color: #7E8A9E;
+    padding-top: 30px;
+    padding-bottom: 10px;
+}
+
+.type-item {
+    color: #E5EEFF;
+    padding-bottom: 5px;
+}
+
+.project-card {
+    width: calc(100% / 6);
+}
+
+.project-card .project-thumbnail {
+    width: 80px;
+    height: 80px;
+    margin-bottom: 10px;
+}
+
+.thumbnail-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 5px;
 }
 
 /* DROPDOWN DRAFT */
