--- a/src/style/common.css
+++ b/src/style/common.css
@@ -31,6 +31,17 @@ button {
 .wrapper {
     height: 100vh;
     width: 100%;
+    overflow: hidden;
+}
+
+.row {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.col {
+    width: 100%;
+    margin-bottom: 20px;
 }
 
 /* Flex */
