--- a/src/style/utilities.css
+++ b/src/style/utilities.css
@@ -9,6 +9,7 @@
     --hover-link-label-background-color: #333;
     --main-blue: #0059D1;
     --side-menu-background-color: #232934;
+    --active-category-color: #3D424D;
     --project-page-background-color: #1E1F21;
     --side-menu-width: 200px;
     --close-btn-color: #FF4C4A;
