--- a/src/style/hover.css
+++ b/src/style/hover.css
@@ -8,7 +8,17 @@
 }
 
 /* Home Page */
-.folder:hover .folder-icon{
+.folder:hover .folder-icon {
+    border: 1px solid rgba(162, 162, 162, 0.5);
+    border-radius: 5px;
+}
+
+.folder:hover .reel-icon {
+    border: 1px solid rgba(162, 162, 162, 0.5);
+    border-radius: 5px;
+}
+
+.folder:hover .cv-icon {
     border: 1px solid rgba(162, 162, 162, 0.5);
     border-radius: 5px;
 }
@@ -18,3 +28,21 @@
     border-radius: 5px;
 }
 
+/* Projects Page */
+.side-menu-header:hover .btn-icon {
+    display: inline-block;
+}
+
+.grid-card:hover .project-thumbnail {
+    border: 1px solid rgba(162, 162, 162, 0.5);
+    border-radius: 5px;
+}
+
+.grid-card:hover .project-name {
+    background-color: var(--main-blue);
+    border-radius: 5px;
+}
+
+.grid-icon:hover {
+    background-color: var(--active-category-color);
+}
