--- a/src/style/index.css
+++ b/src/style/index.css
@@ -134,18 +134,17 @@
 }
 
 .folders {
-    width: 20%;
+    width: 210px;
     flex-wrap: wrap;
 }
 
 .folder {
     margin-bottom: 30px;
-    width: calc(50% - 30px);
-    margin-right: 30px;
+    width: 100%;
 }
 
 .folder .folder-icon {
-    width: 80px;
+    width: 100%;
     padding: .3rem;
 }
 
@@ -155,8 +154,14 @@
     font-size: 0.9rem;
 }
 
+.reel .reel-icon {
+    width: 80px;
+    padding: .3rem;
+}
+
 .cv .cv-icon {
     width: 60px;
+    padding: .3rem;
 }
 
 /* Projects Page */
@@ -171,6 +176,11 @@
     width: var(--side-menu-width);
     background-color: var(--side-menu-background-color);
     color: #ffffff;
+}
+
+.btn-icon {
+    display: none;
+    font-size: .6rem;
 }
 
 .projects-list {
@@ -197,6 +207,11 @@
     box-shadow: 5px 2px 8px #414247;
 }
 
+.active-side-bar {
+    background-color: var(--active-category-color);
+    border-radius: 5px;
+}
+
 .projects-list-header {
     height: 30px;
     padding-bottom: 20px;
@@ -214,7 +229,7 @@
 }
 
 .side-menu-body {
-    padding: 0 30px;
+    padding: 30px 30px;
 }
 
 .projects-list-body {
@@ -285,14 +300,14 @@
 }
 
 .layout-grid {
-    margin-right: 25px;
+    margin-right: 20px;
 }
 
 .layout-grid::after {
     content: '';
     position: absolute;
     top: 50%;
-    left: 25px;
+    left: 38px;
     transform: translateY(-50%);
     width: 1px;
     height: 20px;
@@ -303,15 +318,33 @@
     margin-right: 40px;
 }
 
+.grid-card .project-name {
+    font-size: .9rem;
+    padding: 3px 8px;
+}
+
 .category-item {
     color: #7E8A9E;
-    padding-top: 30px;
-    padding-bottom: 10px;
+    padding: 3px 5px;
+    margin-bottom: 10px;
+    margin-top: 20px;
+    cursor: pointer;
+}
+
+.grid-icon {
+    padding: 6px 8px 3px 8px;
+    border-radius: 3px;
 }
 
 .type-item {
     color: #E5EEFF;
-    padding-bottom: 5px;
+    padding: 3px 5px;
+    margin-bottom: 5px;
+    cursor: pointer;
+}
+
+.project-grid {
+    padding-top: 30px;
 }
 
 .project-card {
@@ -319,9 +352,9 @@
 }
 
 .project-card .project-thumbnail {
-    width: 80px;
-    height: 80px;
-    margin-bottom: 10px;
+    width: 100px;
+    height: 100px;
+    padding: 8px;
 }
 
 .project-card .project-thumbnail-sm {
@@ -394,6 +427,12 @@
     top: -2px;
     left: 50%;
     transform: translateX(-50%);
+}
+
+.highlighted {
+    background-color: var(--main-blue);
+    border-radius: 5px;
+    margin-right: 20px;
 }
 
 /* DROPDOWN DRAFT */
