--- a/src/style/utilities.css
+++ b/src/style/utilities.css
@@ -3,7 +3,7 @@
     --header-height: 50px;
     --header-background-color: rgba(0, 0, 0, 0.5);
     --active-link-color: rgba(188, 191, 201, 0.5);
-    --dropdown-background-color: rgb(3, 3, 28);
+    --dropdown-background-color: #23272f;
     --footer-height: 80px;
     --footer-background-color: rgba(59, 59, 59, 0.5);
     --hover-link-label-background-color: #333;
