--- a/src/style/index.css
+++ b/src/style/index.css
@@ -458,3 +458,17 @@
     border-radius: 5px;
     margin-right: 20px;
 }
+
+/* Detail Page */
+.detail-page {
+    height: 100vh;
+    padding-top: 70px;
+    font-family: 'SF Pro Light';
+}
+
+.slider {
+    margin: 20px 0;
+    width: 80%;
+    max-height: 600px;
+    overflow: hidden;
+}
