feat: image slider completed

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -462,8 +462,9 @@
 /* Detail Page */
 .detail-page {
     height: 100vh;
-    padding-top: 70px;
+    padding: 100px 0;
     font-family: 'SF Pro Light';
+    overflow: scroll;
 }
 
 .slider {
@@ -471,4 +472,70 @@
     width: 80%;
     max-height: 600px;
     overflow: hidden;
+}
+
+.slider-img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    display: block;
+}
+
+.prev-slide, .next-slide {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 2rem;
+    color: rgba(255, 255, 255, 0.9);
+}
+
+
+.prev-slide {
+    left: 20px;
+}
+
+.next-slide {
+    right: 20px;
+}
+
+.slider-indicators {
+    position: absolute;
+    bottom: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    gap: 8px;
+    justify-content: center;
+    align-items: center;
+}
+
+.indicator {
+    width: 20px;
+    height: 4px;
+    background-color: rgba(255, 255, 255, 0.5);
+    border-radius: 2px;
+    transition: background-color 0.3s ease;
+    cursor: pointer;
+}
+
+.indicator.active {
+    background-color: rgba(255, 255, 255, 0.9);
+}
+
+.detail-page .main-title {
+    font-size: 3rem;
+    padding-bottom: 5px;
+}
+
+.detail-page .subtitle {
+    font-family: 'SF Pro Thin';
+    font-size: 1.2rem;
+    padding-bottom: 20px;
+}
+
+.detail-page .category-type {
+    background-color: var(--main-blue);
+    color: #ffffff;
+    padding: .3em 1em;
+    border-radius: 10px;
 }
