feat: detail page style added

--- a/src/style/common.css
+++ b/src/style/common.css
@@ -90,6 +90,10 @@ button {
     text-transform: uppercase;
 }
 
+.text-medium {
+    font-family: 'SF Pro Medium';
+}
+
 /* Positioning */
 .p-relative {
     position: relative;
