--- a/src/style/index.css
+++ b/src/style/index.css
@@ -461,15 +461,17 @@
 
 /* Detail Page */
 .detail-page {
+    background-color: var(--project-page-background-color);
+    color: #ffffff;
     height: 100vh;
-    padding: 100px 0;
+    padding: 80px 0 100px 0;
     font-family: 'SF Pro Light';
     overflow: scroll;
 }
 
 .slider {
     margin: 20px 0;
-    width: 80%;
+    width: 70%;
     max-height: 600px;
     overflow: hidden;
 }
@@ -477,7 +479,7 @@
 .slider-img {
     width: 100%;
     height: 100%;
-    object-fit: contain;
+    object-fit: cover;
     display: block;
 }
 
@@ -488,7 +490,6 @@
     font-size: 2rem;
     color: rgba(255, 255, 255, 0.9);
 }
-
 
 .prev-slide {
     left: 20px;
@@ -538,4 +539,24 @@
     color: #ffffff;
     padding: .3em 1em;
     border-radius: 10px;
+}
+
+.details {
+    font-size: 1rem;
+    padding-bottom: 15px;
+}
+
+.badge-tag, .badge-tool {
+    padding: .2em .4em;
+    margin: 0 4px;
+    border-radius: 8px;
+}
+
+.badge-tool {
+    background-color: var(--active-link-color);
+}
+
+.detail-page .description {
+    max-width: 70%;
+    padding-top: 20px;
 }
